<?xml version="1.0" encoding="utf-8" standalone="no"?>
<!-- /*
 * Copyright (C) 2010 Lluís Esquerda
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */ -->
<resources>
    <string name="app_name">CityBikes</string>
    <string name="menu_sync">Sync</string>
    <string name="menu_location">My Location</string>
    <string name="menu_view_all">View All</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_my_account">My account</string>
    <string name="menu_help">Help</string>
    <string name="no_bikes_around">There are no bikes around you. You should try resizing the home radius dragging the blue handle or checking \"View all\" in the options menu</string>
    <string name="bikes">bikes</string>
    <string name="free">spaces</string>
    <string name="network_error">Network error</string>
    <string name="loading">Loading, please wait...</string>
    <string name="preferences_location">My Location</string>
    <string name="preferences_location_title">Select a Location Provider</string>
    <string name="preferences_location_summary">Click to change your location providers (Network and GPS)</string>
    <string name="preferences_network">Bike Network</string>
    <string name="preferences_network_title">Select a bike network</string>
    <string name="preferences_network_summary">Manually find your city\'s bike network</string>
    <string name="preferences_cache_network_title">Clear cache</string>
    <string name="preferences_cache_network_summary">Restart the app state as it was just installed (keeps the favorites)</string>
    <string name="preferences_autofind_network_title">Automatic network selection</string>
    <string name="preferences_autofind_network_summary">Allow automatic network selection based on your current location</string>
    <string name="preference_account_info">Account information</string>
    <string name="preference_account_info_summary">Set up your account to be able to get trip information</string>
    
    <string name="bike_network_alert_title">Bike network selection</string>
    <string name="bike_network_alert_text">I can find a bike network for you, based on you position.\nOr.. you can select it manually from a list of networks. \nWhat would it be?</string>
    
    <string name="bike_network_alert_error_title">No networks found</string>
    <string name="bike_network_alert_error_text">Please try again, or select a network from the list</string>
    <string name="try_again">Try Again</string>
    <string name="manual">Manual</string>
    <string name="bike_network_alert_success_title">Network Found</string>
    <string name="bike_network_alert_success_text0">I have detected</string>
    <string name="bike_network_alert_success_text1">Is that accurate?</string>
    <string name="sure">Sure</string>
    <string name="automatic">Automatic</string>
    <string name="get_bike_mode">Find a bike</string>
    <string name="park_bike_mode">Find a parking</string>
   
    <string name="label_subscriber_city">City</string>
    <string name="label_subscriber_id">Account ID</string>
    <string name="label_subscriber_name">Last name</string>
    <string name="label_subscriber_pin">PIN</string>
    <string name="label_my_account">My account</string>
    <string name="label_firstname">First name:</string>
    <string name="label_lastname">Last Name:</string>
    <string name="label_account_validity">Account validity:</string>
    <string name="label_account_state">Account state:</string>
    <string name="label_trip">Trip</string>
    <string name="label_in_trip">In trip: </string>
    <string name="label_last_trip_date">Last trip date:</string>
    <string name="label_last_trip_duration">Last trip duration:</string>
    <string name="label_last_trip_amount">Last trip amount:</string>
    <string name="days_to_go">%1$s (%2$d days to go)</string>
    <string name="minutes">minutes</string>

    <string name="fling_tooltip">Slide through the green arrow to reveal the bookmarks menu</string>

</resources>
